# ModRecog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  docker-compose.yaml  pyproject.toml  samples.json
.dvc/: config
configs/: config.yaml
configs/data/: radioml2018.yaml
configs/logging/: mlflow.yaml
configs/model/: resnet.yaml
configs/training/: default.yaml
data/: raw.dvc
mlartifacts/371469640360857192/10d8ae09d49e4fc4ad11b7b98a2f5983/artifacts/f1=0.4959-v1/: aliases.txt  f1=0.4959-v1.ckpt  metadata.yaml
mlartifacts/371469640360857192/10d8ae09d49e4fc4ad11b7b98a2f5983/artifacts/last-v2/: aliases.txt  metadata.yaml
mlartifacts/371469640360857192/3d3ce79a2c184bfb9fdc1aba0753b5d7/artifacts/f1=0.6638/: f1=0.6638.ckpt  metadata.yaml
mlartifacts/371469640360857192/3d3ce79a2c184bfb9fdc1aba0753b5d7/artifacts/last/: metadata.yaml
mlartifacts/371469640360857192/474e2650508140328b129b3e72a33888/artifacts/f1=0.1230/: metadata.yaml
mlartifacts/371469640360857192/474e2650508140328b129b3e72a33888/artifacts/last/: last.ckpt  metadata.yaml
mlartifacts/371469640360857192/5579389c37ba47c4ba5f612a278339ef/artifacts/f1=0.3647/: f1=0.3647.ckpt  metadata.yaml
mlartifacts/371469640360857192/5579389c37ba47c4ba5f612a278339ef/artifacts/last-v3/: metadata.yaml
models/: dvc.dvc
models/triton/modrecog/: config.pbtxt
modrecog/: data.py  export.py  infer.py  infer_triton.py  model.py  train.py  utils.py
scripts/: baseline_xgb.py  make_samples_json.py
tests/: test_model.py
(+3 files in other folders)
