[tool.poetry]
name = "modrecog"
version = "0.1.0"
description = "Radio modulation classification from raw I/Q samples (RadioML 2018.01A)"
authors = ["MLOps Team"]
readme = "README.md"
packages = [{ include = "modrecog" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2"
pytorch-lightning = "^2.2"
hydra-core = "^1.3"
mlflow = "^2.12"
h5py = "^3.11"
numpy = "^1.26"
scikit-learn = "^1.4"
xgboost = "^2.0"
dvc = "^3.50"
fire = "^0.6"
matplotlib = "^3.8"
torchmetrics = "^1.3"
onnx = "^1.16"
onnxruntime = "^1.18"
kaggle = "^1.6"
dvc-yadisk = "^0.1.8"
dvc-webdav = "^3.0.1"
scipy = ">=1.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"
pytest = "^8.2"
pytest-cov = "^5.0"

[tool.poetry.scripts]
train = "commands:train"
infer = "commands:infer"
export-onnx = "commands:export_onnx"
export-tensorrt = "commands:export_tensorrt"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["modrecog"]

[tool.ruff.lint.per-file-ignores]
# sklearn/numpy convention: uppercase X for feature matrices is acceptable
"scripts/*.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
